Prueba técnica: se crea el servicio para movimientos.
