# account-service/src/main/java/com/bank/account/domain/model/Movement.java
@@ -1,0 +1,27 @@
+package com.bank.account.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDateTime;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class Movement {
+
+    private Long id;
+
+    private Integer accountId;
+
+    private LocalDateTime movementDate;
+
+    private String movementType;
+
+    private Double amount;
+
+    private Double balance;
+}
